--- a/web/index.html
+++ b/web/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en" xmlns:v-on="http://www.w3.org/1999/xhtml">
+
 <head>
     <meta charset="UTF-8">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css">
@@ -13,6 +14,7 @@
 
     <title>Homepage</title>
 </head>
+
 <body>
 <div id="app" class="full-height">
     <div class="content-wrap">
@@ -31,7 +33,7 @@
                             <a class="nav-link" href="admin.html" v-if="utente.isAdmin==1">Admin</a>
                         </li>
                         <li class="nav-item" v-if="logged">
-                            <a class="nav-link" href="prenotazioni.html">I miei corsi</a>
+                            <a class="nav-link" href="prenotazioni.html">Miei corsi</a>
                         </li>
                         <li class="nav-item" v-if="logged">
                             <a class="nav-link" href="prenota.html">Prenota</a>
@@ -45,24 +47,22 @@
                         <li class="nav-item" v-if="!logged">
                             <a class="nav-link" href="login.html">Accedi</a>
                         </li>
-                        <!--<li class="nav-item">
-                            <a class="nav-link" href="javascript:void(0);"><i class="far fa-chart-bar"></i>Charts</a>
-                        </li>-->
                     </ul>
                 </div>
             </div>
         </nav>
     </header>
 
-    <div class="diagonale">
+    <div class="diagonale"> <!--stile background-->
+
         <div class="container text-center">
-            <p v-if="logged" class="display-4 mt-5 ben"><u>Bentornato {{utente.username}}!</u></p>
+            <p v-if="logged" class="display-4 mt-5 ben"><u>Bentornato {{utente.username}} su StudiaOnline!</u></p>
             <p v-else class="display-4 mt-5 ben"><u>Benvenuto su StudiaOnline!</u></p>
         </div>
 
         <div class="container py-3">
             <div class="jumbotron text-white text-center jumbotron-image shadow">
-                <h2>- 1# sito di corsi di recupero in Italia -</h2>
+                <h2> 1° sito di corsi di recupero in Italia </h2>
                 <div class="row">
                     <div class="col-1"></div>
                     <h4 class="mb-4 p-3 col-10 border border-secondary rounded">
@@ -73,7 +73,8 @@
                 </div>
                 <div class="row">
                     <div class="col-3"></div>
-                    <a href="login.html" class="btn btn-primary btn-lg col-6">Comincia ora!</a>
+                    <a href="login.html" v-if="!logged" class="btn btn-primary btn-lg col-6">Comincia ora!</a>
+                    <a href="prenota.html" v-else class="btn btn-primary btn-lg col-6">Comincia ora!</a>
                 </div>
             </div>
         </div>
@@ -96,7 +97,7 @@
                     <h4 class="card-header"><strong><u>{{corso.titolo}}</u></strong></h4>
                     <div class="card-body">
                         <p class="card-text">{{corso.descrizione}}</p>
-                        <a href="javascript:void(0);" v-if="logged" class="btn btn-light text-primary stretched-link float-right">VEDI CORSO</a>
+                        <a href="prenota.html" v-if="logged" class="btn btn-light text-primary stretched-link float-right">VEDI CORSO</a>
                         <a href="login.html" v-else class="btn btn-light text-primary stretched-link float-right">VEDI CORSO</a>
                     </div>
                 </div>
