--- a/web/prenotazioni.html
+++ b/web/prenotazioni.html
@@ -22,9 +22,9 @@
         <nav class="navbar navbar-expand-lg navbar-mainbg">
             <div class="container">
                 <a class="navbar-brand navbar-logo" href="index.html"><img src="img/graduate.png" id="graduate" alt="Logo"/></a>
-                <!--<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+                <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
                     <i class="fa fa-bars" aria-hidden="true"></i>
-                </button>-->
+                </button>
                 <div class="collapse navbar-collapse" id="navbarSupportedContent">
                     <ul class="navbar-nav ml-auto">
                         <div class="hori-selector"><div class="left"></div><div class="right"></div></div>
@@ -43,9 +43,6 @@
                         <li class="nav-item">
                             <a class="nav-link" v-on:click="logout" href="javascript:void(0);">Logout</a>
                         </li>
-                        <!--<li class="nav-item">
-                            <a class="nav-link" href="javascript:void(0);"><i class="far fa-chart-bar"></i>Charts</a>
-                        </li>-->
                     </ul>
                 </div>
             </div>
